Fix name (use full cyryllic for russian books)

--- a/research/Киселёв_Элементы_алгебры_и_анализа_часть_1.md
+++ b/research/Киселёв_Элементы_алгебры_и_анализа_часть_1.md
@@ -2,7 +2,7 @@
 title: Алгебра, часть 1
 author: Andrei Petrovich Kiselyov
 date: 2006
-directory: ~/Science/math/Kiselyov_Элементы_алгебры_и_анализа/
+directory: ~/Science/math/Киселёв_Элементы_алгебры_и_анализа
 tags:
   - research
   - inbox
@@ -11,11 +11,11 @@ sr-interval: 167
 sr-ease: 230
 ---
 
-В наше время книги А.П. Киселева стали библиографической редкостью и неизвестны
+В наше время книги А. П. Киселева стали библиографической редкостью и неизвестны
 молодым учителям. А между тем дальнейшее совершенствование преподавания
 математики невозможно без личного знакомства каждого учителя с учебниками,
 некогда считавшимися эталонными. Именно по этой причине и предпринимается
-переиздание "Алгебры" А.П. Киселева. Рекомендовано Научно-методическим советом
+переиздание "Алгебры" А. П. Киселева. Рекомендовано Научно-методическим советом
 по математике Министерства образования и науки Российской Федерации в качестве
 учебного пособия для общеобразовательных школ и лицеев.
 
