Fix research notes names

--- a/research/Киселёв-Элементы_алгебры_и_анализа_часть_1.md
+++ b/research/Киселёв-Элементы_алгебры_и_анализа_часть_1.md
@@ -2,7 +2,7 @@
 title: Алгебра, часть 1
 author: Andrei Petrovich Kiselyov
 date: 2006
-directory: ~/Science/math/Киселёв_Элементы_алгебры_и_анализа
+directory: ~/Science/math/Киселёв-Элементы_алгебры_и_анализа
 tags:
   - research
   - inbox
