--- a/research/Столяров-Программирование_том_1.md
+++ b/research/Столяров-Программирование_том_1.md
@@ -1,19 +1,15 @@
 ---
-title: Программирование - Введение в профессию
+title: Программирование - Введение в профессию. Том 1.
 author: Андрей Викторович Столяров
 date: 2021
-dateAdded: 2022-12-18
-external:
-citekey: AndreyViktorovichStolyarovProgrammirovanieVvedenieProfessiyu2021b
+external: http://www.stolyarov.info/books/programming_intro/vol1
 tags:
   - research
   - inbox
-localLibrary: zotero://select/items/1_4XC9U67X
-cloudLibrary: http://zotero.org/users/9108355/items/4XC9U67X
-draft: true
 sr-due: 2023-11-16
 sr-interval: 183
 sr-ease: 247
+directory: ~/Computer/programming/Столяров-Программирование
 ---
 
 ### Введение {#введение}
