Update inbox intervals

--- a/research/Детская_литература-Библиотека_мировой_литературы_для_детей.md
+++ b/research/Детская_литература-Библиотека_мировой_литературы_для_детей.md
@@ -4,6 +4,9 @@ tags:
   - inbox
   - research
 directory: ~/Arts_and_Entertainment/literature/Библиотека_мировой_литературы_для_детей/
+sr-due: 2023-10-06
+sr-interval: 3
+sr-ease: 250
 ---
 
 # Детская литература-Библиотека мировой литературы для детей
