--- a/research/Хэндли-Считайте_в_уме_как_компьютер.md
+++ b/research/Хэндли-Считайте_в_уме_как_компьютер.md
@@ -5,6 +5,9 @@ tags:
   - inbox
   - research
 directory: ~/Science/math/Хэндли_Считайте_в_уме_как_компьютер/
+sr-due: 2023-10-06
+sr-interval: 3
+sr-ease: 250
 ---
 
 # Хэндли Считайте в уме как компьютер
