--- a/Образовательная_манга.md
+++ b/Образовательная_манга.md
@@ -2,6 +2,9 @@
 tags:
   - inbox
 directory: ~/Arts_and_Entertainment/manga/Образовательная_манга/
+sr-due: 2023-10-17
+sr-interval: 14
+sr-ease: 292
 ---
 
 # Образовательная_манга
