--- a/research/Экзюпери-Цитадель.md
+++ b/research/Экзюпери-Цитадель.md
@@ -4,7 +4,7 @@ tags:
   - inbox
   - fiction
 author: Antoine de Saint-Exupéry
-directory: "~/Arts_and_Entertainment/literature/Antoine de Saint Exupery/The Little Prince (1009)/"
+directory: "~/Arts_and_Entertainment/literature/Antoine de Saint Exupery/Malien'kii prints. Tsitadiel' (sbornik) (1002)/"
 sr-due: 2023-10-06
 sr-interval: 3
 sr-ease: 250
@@ -20,5 +20,4 @@ sr-ease: 250
 > сложную для понимания философскую терминологию. В книге также не содержится
 > сюжета, по этой причине её можно начинать читать с любого места.\
 > — <cite>[Wikipedia](https://ru.wikipedia.org/wiki/Цитадель_\(книга,_1948\))</cite>
-
 
