--- a/research/Демидович-Сборник_задач_и_упражнений_по_математическому_анализу.md
+++ b/research/Демидович-Сборник_задач_и_упражнений_по_математическому_анализу.md
@@ -5,8 +5,8 @@ tags:
   - inbox
   - research
   - computer_science
-  - math
-directory: "~/Arts_and_Entertainment/literature/Diemidovich B.P_/Sbornik zadach i uprazhnienii po matiematichieskomu analizu (2372)/"
+  - mathematics
+directory: ~/Arts_and_Entertainment/literature/Diemidovich B.P_/Sbornik zadach i uprazhnienii po matiematichieskomu analizu (2372)/
 ---
 
 # Сборник задач и упражнений по математическому анализу
