--- a/research/Детская_литература-Библиотека_мировой_литературы_для_детей.md
+++ b/research/Детская_литература-Библиотека_мировой_литературы_для_детей.md
@@ -3,6 +3,7 @@ date: 1976
 tags:
   - inbox
   - research
+  - art
 directory: ~/Arts_and_Entertainment/literature/Библиотека_мировой_литературы_для_детей/
 sr-due: 2023-10-06
 sr-interval: 3
