--- a/research/Зорич-Математический_анализ.md
+++ b/research/Зорич-Математический_анализ.md
@@ -4,11 +4,11 @@ author: Зорич В.А.
 tags:
   - inbox
   - research
-  - math
   - computer_science
+  - mathematics
 directory:
-  - "~/Arts_and_Entertainment/literature/Zorich V.A_/Matiematichieskii analiz (chast' 1), 10-ie izdaniie (2378)/"
-  - "~/Arts_and_Entertainment/literature/Zorich V.A_/Matiematichieskii analiz (chast' 2), 9-ie izdaniie (2377)/"
+  - ~/Arts_and_Entertainment/literature/Zorich V.A_/Matiematichieskii analiz (chast' 1), 10-ie izdaniie (2378)/
+  - ~/Arts_and_Entertainment/literature/Zorich V.A_/Matiematichieskii analiz (chast' 2), 9-ie izdaniie (2377)/
 ---
 
 # Математический анализ (часть 1)
