--- a/research/Килпатрик-Свет_и_освещение.md
+++ b/research/Килпатрик-Свет_и_освещение.md
@@ -1,8 +1,9 @@
 ---
 tags:
-  - "research"
-  - "inbox"
-author: "Килпатрик Дэвид"
+  - research
+  - inbox
+  - art
+author: Килпатрик Дэвид
 date: 1988
 sr-due: 1678896000
 sr-ease: 250
