--- a/research/Столяров-Программирование_том_1.md
+++ b/research/Столяров-Программирование_том_1.md
@@ -2,10 +2,12 @@
 title: Программирование - Введение в профессию. Том 1.
 author: Андрей Викторович Столяров
 date: 2021
-external: http://www.stolyarov.info/books/programming_intro/vol1
+external:
+  - http://www.stolyarov.info/books/programming_intro/vol1
 tags:
   - research
   - inbox
+  - programming
 sr-due: 2023-11-16
 sr-interval: 183
 sr-ease: 247
