--- a/research/Волков-Биохимия_мышечной_деятельности.md
+++ b/research/Волков-Биохимия_мышечной_деятельности.md
@@ -3,8 +3,9 @@ date: 2023-09-21
 tags:
   - inbox
   - research
+  - IRL
 author: Волков Н.И.
-directory: "~/Arts_and_Entertainment/literature/Volkov N. I_/Biokhimiia myshiechnoi dieiatiel'nosti (1603)/"
+directory: ~/Arts_and_Entertainment/literature/Volkov N. I_/Biokhimiia myshiechnoi dieiatiel'nosti (1603)/
 sr-due: 2023-10-06
 sr-interval: 3
 sr-ease: 266
