--- a/research/Хирьянов-Курс_молодого_бойца_МФТИ_язык_С.md
+++ b/research/Хирьянов-Курс_молодого_бойца_МФТИ_язык_С.md
@@ -4,7 +4,9 @@ date: 2023-09-14
 tags:
   - inbox
   - research
-external: https://www.youtube.com/playlist?list=PLRDzFCPr95fLjzcv6nNdjMu_9RcZgIM9U
+  - programming
+external:
+  - https://www.youtube.com/playlist?list=PLRDzFCPr95fLjzcv6nNdjMu_9RcZgIM9U
 directory: ~/Computer/programming/Хирьянов-Курс_молодого_бойца_МФТИ_язык_С/
 sr-due: 2023-10-04
 sr-interval: 1
