--- a/research/Хэндли-Считайте_в_уме_как_компьютер.md
+++ b/research/Хэндли-Считайте_в_уме_как_компьютер.md
@@ -4,6 +4,7 @@ author: Билл Хэндли
 tags:
   - inbox
   - research
+  - mathematics
 directory: ~/Science/math/Хэндли_Считайте_в_уме_как_компьютер/
 sr-due: 2023-10-06
 sr-interval: 3
