Adjust research notes titles

--- a/research/Киселёв-Элементы_алгебры_и_анализа_часть_1.md
+++ b/research/Киселёв-Элементы_алгебры_и_анализа_часть_1.md
@@ -1,5 +1,4 @@
 ---
-title: Алгебра, часть 1
 author: Andrei Petrovich Kiselyov
 date: 2006
 directory: ~/Science/math/Киселёв-Элементы_алгебры_и_анализа
@@ -11,6 +10,8 @@ sr-due: 2023-10-31
 sr-interval: 167
 sr-ease: 230
 ---
+
+# Алгебра, часть 1
 
 В наше время книги А. П. Киселева стали библиографической редкостью и неизвестны
 молодым учителям. А между тем дальнейшее совершенствование преподавания
