--- a/research/Экзюпери-Маленький_Принц.md
+++ b/research/Экзюпери-Маленький_Принц.md
@@ -3,8 +3,9 @@ date: 2023-09-30
 tags:
   - inbox
   - fiction
+  - research
 author: Antoine de Saint-Exupéry
-directory: "~/Arts_and_Entertainment/literature/Antoine de Saint Exupery/Malien'kii prints. Tsitadiel' (sbornik) (1002)/"
+directory: ~/Arts_and_Entertainment/literature/Antoine de Saint Exupery/Malien'kii prints. Tsitadiel' (sbornik) (1002)/
 sr-due: 2023-10-06
 sr-interval: 3
 sr-ease: 250
