--- a/research/Экзюпери-Цитадель.md
+++ b/research/Экзюпери-Цитадель.md
@@ -3,6 +3,7 @@ date: 2023-09-30
 tags:
   - inbox
   - fiction
+  - research
 author: Antoine de Saint-Exupéry
 directory: "~/Arts_and_Entertainment/literature/Antoine de Saint Exupery/Malien'kii prints. Tsitadiel' (sbornik) (1002)/"
 sr-due: 2023-10-06
