Update manga notes

--- a/Образовательная_манга.md
+++ b/Образовательная_манга.md
@@ -1,15 +1,16 @@
 ---
 tags:
   - inbox
-directory: ~/Arts_and_Entertainment/manga/Образовательная_манга/
+  - manga
 sr-due: 2023-10-17
 sr-interval: 14
 sr-ease: 292
+external: https://www.ohmsha.co.jp/english/manga.htm
 ---
 
-# Образовательная_манга
+# Образовательная манга
 
-Серия оброзовательной [[Manga|манги]]. Особенность такой литературы в доступной
-подаче информации с примерами из повседненовной жизни (я думаю что-то вроде
-энциклопедии для детей и не только). Думаю поможет сделать процесс обучения
-увлекательным и легким.
+Серия оброзовательной [[Manga|манги]]. Особенность такой литературы в
+доступной подаче информации с примерами из повседненовной жизни (я думаю
+что-то вроде энциклопедии для детей и не только). Думаю поможет сделать
+процесс обучения увлекательным и легким.
