--- a/research/Демидович-Сборник_задач_и_упражнений_по_математическому_анализу.md
+++ b/research/Демидович-Сборник_задач_и_упражнений_по_математическому_анализу.md
@@ -6,7 +6,7 @@ tags:
   - research
   - computer_science
   - mathematics
-directory: ~/Arts_and_Entertainment/literature/Diemidovich B.P_/Sbornik zadach i uprazhnienii po matiematichieskomu analizu (2372)/
+directory: ~/Arts_and_Entertainment/literature/Demidovich B.P_/Sbornik zadach i uprazhnienii po matiematichieskomu analizu (2372)/"
 ---
 
 # Сборник задач и упражнений по математическому анализу
