--- a/research/Экзюпери-Маленький_Принц.md
+++ b/research/Экзюпери-Маленький_Принц.md
@@ -5,7 +5,7 @@ tags:
   - fiction
   - research
 author: Antoine de Saint-Exupéry
-directory: ~/Arts_and_Entertainment/literature/Antoine de Saint Exupery/Malien'kii prints. Tsitadiel' (sbornik) (1002)/
+directory: ~/Arts_and_Entertainment/literature/Antoine de Saint Exupery/The Little Prince (1009)/"
 sr-due: 2023-10-06
 sr-interval: 3
 sr-ease: 250
