--- a/research/Кушниренко-Программирование_для_математиков.md
+++ b/research/Кушниренко-Программирование_для_математиков.md
@@ -5,7 +5,7 @@ tags:
   - inbox
   - research
   - computer_science
-directory: "~/Arts_and_Entertainment/literature/Anatolii Gieorghiievich Kushnirienko/Proghrammirovaniie dlia matiematikov(1988) (2373)/"
+directory: "~/Arts_and_Entertainment/literature/A. G. Kushnirenko/Proghrammirovaniie dlia matiematikov(1988) (2373)/"
 ---
 
 # Программирование для математиков
