--- a/research/Романовский-Дискретный_анализ.md
+++ b/research/Романовский-Дискретный_анализ.md
@@ -1,13 +1,13 @@
 ---
 author: Иосиф Владимирович Романовский
 date: 2008
-directory: "~/Arts_and_Entertainment/literature/Iosif Vladimirovich Romanovsky/Diskrietnyi analiz (2274)/"
+directory: "~/Arts_and_Entertainment/literature/Iosif Romanovsky/Diskrietnyi analiz (2274)/"
 tags:
   - inbox
   - research
   - computer_science
 ---
 
-# Дискретный_анализ
+# Дискретный анализ
 
 
