--- a/research/Петров-Полиглот.md
+++ b/research/Петров-Полиглот.md
@@ -6,6 +6,9 @@ tags:
   - inbox
   - research
   - english
+sr-due: 2024-01-17
+sr-interval: 1
+sr-ease: 230
 ---
 
 # Дмитрий Петров - Полиглот английский за 16 часов.
