Update review intervals

--- a/research/Экзюпери-Маленький_Принц.md
+++ b/research/Экзюпери-Маленький_Принц.md
@@ -40,7 +40,7 @@ I like takes about important stuff are hidden deeply in humans.
 > под Рождество 1942 года) и в двух языковых изданиях: на французском — языке
 > оригинала, — и на английском в переводе Катерины Вудс.
 
-Человек может отказать от своего призвание из-за глупости того, кто ему что-то
+Человек может отказаться от своего призвание из-за глупости того, кто ему что-то
 советует или наставляет, но обдумывая последствия.
 
 По одежке встречают! Никто не поверил турецкому астроному пока тот был одет по
@@ -48,17 +48,23 @@ I like takes about important stuff are hidden deeply in humans.
 
 Кто хочет барашка, тот, уж конечно, существует.
 
-Если ты сумеешь судить себя, значит ты поистине мудр (встреча с королем).
+Если ты сумеешь судить ==себя==, значит ты поистине мудр (встреча с королем).
+<!--SR:!2024-01-28,3,270-->
 
 Странные взрослыe которых встречает Маленький принц:
+?
  - короля, которому кажется, что он правит звёздами
  - честолюбеца, который хочет, чтобы окружающие им восхищались
  - пьяницу (который пьёт, чтобы забыть, что ему совестно пить)
  - делового человека (который постоянно считает звёзды, думая, что владеет многими из них и хочет купить ещё больше)
  - фонарщика (который, верный своему слову, каждую минуту зажигает и тушит фонарь)
  - географа (который записывает в книгу рассказы путешественников, но сам никогда не путешествует)
+<!--SR:!2024-01-26,1,250-->
 
 Интересно цифры которые использовались в произведении реальны?
+?
+Нет в основном выдуманные или не актуальные (нужно проверить).
+<!--SR:!2024-01-28,3,270-->
 
 Например 500 млн. известных звезд, астероид 3251, астероид Б-612 (астероиды не сущствуют) или 2
 миллиарда людей (194X).
