--- a/research/Кушниренко-Программирование_для_математиков.md
+++ b/research/Кушниренко-Программирование_для_математиков.md
@@ -6,6 +6,9 @@ tags:
   - research
   - SR_computer_science
 directory: ~/Arts_and_Entertainment/literature/A. G. Kushnirenko/Proghrammirovaniie dlia matiematikov(1988) (2373)/
+sr-due: 2024-01-26
+sr-interval: 1
+sr-ease: 225
 ---
 
 # Программирование для математиков
