--- a/research/Зорич-Математический_анализ.md
+++ b/research/Зорич-Математический_анализ.md
@@ -9,6 +9,9 @@ tags:
 directory:
   - ~/Arts_and_Entertainment/literature/Vladimir Zorich/Matiematichieskii analiz (chast' 1), 10-ie izdaniie (2378)/
   - ~/Arts_and_Entertainment/literature/Vladimir Zorich/Matiematichieskii analiz (chast' 2), 9-ie izdaniie (2377)/
+sr-due: 2024-01-27
+sr-interval: 2
+sr-ease: 243
 ---
 
 # Математический анализ (часть 1)
