--- a/research/Романовский-Дискретный_анализ.md
+++ b/research/Романовский-Дискретный_анализ.md
@@ -6,6 +6,9 @@ tags:
   - inbox
   - research
   - SR_computer_science
+sr-due: 2024-01-28
+sr-interval: 3
+sr-ease: 263
 ---
 
 # Дискретный анализ
