Update review time

--- a/research/Демидович-Сборник_задач_и_упражнений_по_математическому_анализу.md
+++ b/research/Демидович-Сборник_задач_и_упражнений_по_математическому_анализу.md
@@ -7,6 +7,9 @@ tags:
   - SR_mathematics
   - SR_computer_science
 directory: ~/Arts_and_Entertainment/literature/Demidovich B.P_/Sbornik zadach i uprazhnienii po matiematichieskomu analizu (2372)/"
+sr-due: 2024-01-28
+sr-interval: 3
+sr-ease: 263
 ---
 
 # Сборник задач и упражнений по математическому анализу
