Adjust formatting of notes

--- a/7z.md
+++ b/7z.md
@@ -10,12 +10,10 @@ sr-ease: 259
 
 # 7z file archiver
 
-File archiver with a high compression ratio. I use it to extract and create
-archives in various formats.
+File archiver with a high compression ratio. I use it to extract and create archives in various formats.
 
 > [!NOTE]
-> DO NOT USE the 7-zip format for backup purpose on Linux/Unix. 7-zip does not
-> store the owner/group of the file, instead you can use `tar`.
+> DO NOT USE the 7-zip format for backup purpose on Linux/Unix. 7-zip does not store the owner/group of the file, instead you can use `tar`.
 >
 > - to back up a directory: `tar cf - directory | 7z a -si directory.tar.7z`
 > - to restore your backup: `7z x -so directory.tar.7z | tar xf -`
