--- a/7z.md
+++ b/7z.md
@@ -2,7 +2,7 @@
 created: 2024-11-05T10:00+03:00
 tags:
   - blog
-  - computer_programming_tools
+  - ENDS
 sr-due: 2025-07-26
 sr-interval: 12
 sr-ease: 259
