Update notes metadata

--- a/7z.md
+++ b/7z.md
@@ -2,7 +2,7 @@
 created: 2024-11-05T10:00+03:00
 tags:
   - blog
-  - ends
+  - ends-clean
 sr-due: 2025-07-26
 sr-interval: 12
 sr-ease: 259
@@ -42,7 +42,7 @@ Usage:
 
 ## Common usage examples
 
-Add all files in dir1 ti archive.7z with maximum compression
+Add all files in `dir1` to archive.7z with maximum compression
 
 ```sh
 7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=32m -ms=on archive.7z dir1`
@@ -54,40 +54,39 @@ Add all files in dir1 ti archive.7z with maximum compression
 # -ms=on      solid archive = on
 ```
 
-Add (store) all files in dir1 to archive.7z with No Compression
-<br class="f">
+Add (store) all files in `dir1` to `archive.7z` with No Compression
 ```sh
 7z a -m0=copy archive.7z dir1
 ```
 
 Add a file or directory to a new or **existing** archive:
-<br class="f">
+<span class="f"></span>
 `7z a archive.7z file_or_directory`
 
 Encrypt an existing archive (including filenames):
-<br class="f">
+<span class="f"></span>
 `7z a encrypted.7z -ppassword -mhe=on archive.7z`
 
 Extract an archive preserving the original directory structure:
-<br class="f">
+<span class="f"></span>
 `7z x archive.7z`
 
 Extract an archive to a specific directory:
-<br class="f">
+<span class="f"></span>
 `7z x archive.7z -opath/to/output`
 
 Extract an archive to `stdout`:
-<br class="f">
+<span class="f"></span>
 `7z x archive.7z -so`
 
 Archive using a specific archive type:
-<br class="f">
+<span class="f"></span>
 `7z a -t7z|bzip2|gzip|lzip|tar|zip archive.7z file_or_directory`
 
 List the contents of an archive:
-<br class="f">
+<span class="f"></span>
 `7z l archive.7z`
 
 List available archive types:
-<br class="f">
+<span class="f"></span>
 `7z i`
